# AMAMA

./: .gitignore  LICENSE  README.md  callbacks.txt  devicetree.txt  dlllist.txt  dumpfiles.txt  envars.txt  getsids.txt  joblinks.txt  registry_printkey.txt  sessions.txt  svclist.txt  svcscan.txt  test_input.json
Backbone/: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  updates.md
Backbone/backbone/: __init__.py  __main__.py  case_graph.py  registry.py
Backbone/backbone/contracts/: __init__.py  base_model.py  normalize.py  types.py  validate.py
Backbone/backbone/dev/: stub_module.py
Backbone/backbone/dispatch/: __init__.py  module_adapter.py
Backbone/backbone/orchestrator/: __init__.py  agent.py  loop.py
Backbone/backbone/report/: __init__.py  agent.py  traceability.py
Backbone/backbone/threat_intel/: __init__.py  agent.py  rate_limiter.py  vt_client.py
Backbone/config/: orchestrator.example.yaml
Backbone/prompts/: orchestrator.md  report.md  threat_intel.md
Backbone/schemas/: entity_findings.schema.json  entity_query.schema.json  module_scan_result.schema.json
Backbone/tests/: conftest.py  test_case_graph.py  test_dispatch_guard.py  test_normalize.py  test_orchestrator_loop.py  test_ram_module.py  test_registry.py  test_threat_intel.py  test_traceability.py
Backbone/tests/test-data/input/: scan_max_rounds.json
Backbone/tests/test-data/input/orchestrator-input/: scan_convergence.json  (+3 more)
Modules/RAM/ram-collector/: README.md  pyproject.toml
Modules/RAM/ram-collector/collector/: chunker.py  tree.py  vol3_runner.py
(+970 files in other folders)
