[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "collector"
version = "0.1.0"
description = "Volatility 3 collector — builds DFS-ordered process chunks for FIND_EVIL Agent 1"
requires-python = ">=3.10"
# No mandatory runtime dependencies — Volatility is invoked via subprocess,
# not imported. tiktoken is optional; if absent, a char/4 fallback is used.
dependencies = []

[project.optional-dependencies]
# pip install collector[fast]  → accurate tiktoken-based token estimates
fast = ["tiktoken"]
dev = ["pytest", "tiktoken"]

[project.scripts]
# Usage: collector --image /path/to/dump.elf
# Or:    python -m collector --image /path/to/dump.elf
collector = "collector.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
